# nhannht

./: .gitignore  README.ipynb  README.md  README.org  bun.lockb  go.mod  main.go  note.org  package.json  pyproject.toml
api/: i-am-another-nhannht.go  scroll-around-and-around.go
public/: adventurer-attack-chain.base64  adventurer-run.base64  adventurer-tired.base64  blackchancery64  forest-bottom.base64  forest.base64  minotaur-attack.base64  minotaur-standing.base64
src/data/: colors.json
src/pages/api/: adventurer.ts  iamnhannht.ts  technologies.tsx
