[tool.poetry]
name = "nhannht"
version = "0.1.0"
description = ""
authors = ["nhannht <nhanclassroom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupytext = "^1.13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
